0.03
- Update build system.

0.02 (August 3, 2011)
- Better AUTHOR section in doc.
- Fix tests with Test::Pod for perl lesser than 5.8.0.
- Remove obsolete ';' in code.
- Remove "(3pm)" from pod doc.

0.01 (July 14, 2011)
- First version.