@@ -1,4 +1,6 @@
 CHANGES
+examples/ex1.pl
+examples/ex2.pl
 inc/Module/Install.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
