@@ -23,6 +23,7 @@ meta-spec:
 name: Class-Utils
 no_index:
   directory:
+    - examples
     - inc
     - t
 requires:
