@@ -1,5 +1,6 @@
 0.03
 - Update build system.
+- Add examples/ directory.
 
 0.02 (August 3, 2011)
 - Better AUTHOR section in doc.
